# context-gather

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  SECURITY.md  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml
src/: chunker.rs  cli.rs  clipboard.rs  config.rs  constants.rs  gather.rs  header.rs  interactive.rs  lib.rs  main.rs  output.rs  pipeline.rs  tokenizer.rs  xml_output.rs
src/context/: chunker.rs  gather.rs  header.rs  mod.rs  types.rs  xml.rs
src/io/: clipboard.rs  mod.rs
src/ui/: interactive.rs  mod.rs  stream.rs  tui_events.rs  tui_render.rs  tui_state.rs
tests/: chunker_prop.proptest-regressions  chunker_prop.rs  chunker_unit.rs  cli_chunked.rs  cli_dedup.rs  cli_errors.rs  cli_exclude.rs  cli_git_info.rs  cli_happy.rs  cli_multistep.rs  cli_tokenizer.rs  cli_warnings.rs  common.rs  gather.rs  header.rs  hook_restore.rs  xml.rs
tests/common/: mod.rs
tests/integ/: cli_chunked.rs  cli_happy.rs
tests/proptests/: chunker_prop.rs
tests/unit/: chunker.rs  gather.rs  header.rs  xml.rs
