[package]
name = "context-gather"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
tiktoken-rs = { version = "0.9.1", features = ["async-openai", "dhat-heap"] }
crossterm = "0.29.0"
glob = "0.3.2"
globset = "0.4.16"
clap = { version = "4.4.6", features = ["derive"] }
ignore = { version = "0.4.23", features = ["simd-accel"] }
fuzzy-matcher = "0.3.7"
path-slash = "0.2.1"
dunce = "1.0.5"
chrono = "0.4.41"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
cli-clipboard = "0.4.0"
ratatui = "0.29.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1.3"
assert_fs = "1.1"
tempfile = "3.10"
insta = { version = "1.38", features = ["yaml"] }
proptest = "1.4"
